force-app/main/default/objects/CodeSummary__c/CodeSummary__c.object-meta.xml
<CustomObject>
    <label>Code</label>
    <nameField>
        <displayFormat>C{0000}</displayFormat>
        <label>Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>