force-app/main/default/objects/CodeSummary__c/fields/LineDetails__c.field-meta.xml
<CustomField>
    <fullName>LineDetails__c</fullName>
    <label>LineDetails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>