force-app/main/default/objects/CodeSummary__c/fields/LinesOfCode__c.field-meta.xml
<CustomField>
    <fullName>LinesOfCode__c</fullName>
    <label>LinesOfCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>