force-app/main/default/objects/CodeSummary__c/fields/RiskDetails__c.field-meta.xml
<CustomField>
    <fullName>RiskDetails__c</fullName>
    <label>RiskDetails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>