force-app/main/default/objects/CodeSummary__c/fields/RisksPerLineRatio__c.field-meta.xml
<CustomField>
    <fullName>RisksPerLineRatio__c</fullName>
    <label>RisksPerLineRatio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>